removing vendor folder from gitignire.

--- a/public/index.html
+++ b/public/index.html
@@ -193,9 +193,13 @@
   <main id="hero" class="py-5">
     <div class="container position-relative">
       
-  <h2>Hero Heading</h2>
-<p>Hero body.</p>
-<a href="#" class="btn btn-primary">Call to Action</a>
+  
+  <h2 class="display-3 wvu-shout text-wvu-blue">My Cool Hero Heading</h2>
+  <p class="lead">My cool body text.</p>
+  
+    <a class="btn btn-primary mb-1" href="/cta-1">CTA 1</a> <a class="btn btn-primary mb-1" href="/cta-2">CTA 2</a> 
+  
+
 
     </div>
   </main>
